# bible-get

./: README.md  pyproject.toml
bibleget/: main.py  select.py
